fix: multi word keys wraping was visible on menu animation

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -40,6 +40,7 @@
 
 .link-text {
     display: none;
+    white-space: nowrap;
     margin-left: 1rem;
 }
 
